{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 2932,
  "lineage": "6a0190bf-3377-ee6e-ab41-3eae7da5d7e4",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_instance",
      "name": "instance_1_info",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "instance_1_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.122.7.39",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-07-08T13:13:32.440-07:00",
            "id": "projects/ctp-prj-1/regions/us-central1/addresses/instance-1-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "instance-1-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "ctp-prj-1",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/regions/us-central1/addresses/instance-1-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "vpn_gateway_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.224.60.218",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-07-08T13:13:32.416-07:00",
            "id": "projects/ctp-prj-1/regions/us-central1/addresses/vpn-gateway-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "vpn-gateway-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "ctp-prj-1",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/regions/us-central1/addresses/vpn-gateway-ip"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/zones/us-central1-a/instanceGroups/web-server-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-07-08T13:15:09.018-07:00",
            "enable_cdn": false,
            "fingerprint": "gwykRL_htyg=",
            "generated_id": 9033144579739743778,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/httpHealthChecks/http-basic-check"
            ],
            "id": "projects/ctp-prj-1/global/backendServices/backend-service-unique",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-service-unique",
            "port_name": "http",
            "project": "ctp-prj-1",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/backendServices/backend-service-unique",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.google_compute_image.debian",
            "google_compute_http_health_check.default",
            "google_compute_instance_group_manager.webservers",
            "google_compute_instance_template.instance_template",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_lb_health_checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-07-08T13:14:04.688-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ctp-prj-1/global/firewalls/allow-lb-health-checks",
            "log_config": [],
            "name": "allow-lb-health-checks",
            "network": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/networks/vpc-001",
            "priority": 1000,
            "project": "ctp-prj-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/firewalls/allow-lb-health-checks",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "https_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-07-08T13:14:04.629-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ctp-prj-1/global/firewalls/https-firewall",
            "log_config": [],
            "name": "https-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/networks/vpc-001",
            "priority": 1000,
            "project": "ctp-prj-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/firewalls/https-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "priority100",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-07-08T13:14:04.804-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ctp-prj-1/global/firewalls/priority100",
            "log_config": [],
            "name": "priority100",
            "network": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/networks/vpc-001",
            "priority": 1000,
            "project": "ctp-prj-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/firewalls/priority100",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "esp_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-07-08T13:14:15.385-07:00",
            "id": "projects/ctp-prj-1/regions/us-central1/forwardingRules/esp-forwarding-rule",
            "ip_address": "35.224.60.218",
            "ip_protocol": "ESP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "esp-forwarding-rule",
            "network_tier": "PREMIUM",
            "project": "ctp-prj-1",
            "recreate_closed_psc": false,
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/regions/us-central1/forwardingRules/esp-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/regions/us-central1/targetVpnGateways/ctp-vpn-us"
          },
          "dependencies": [
            "google_compute_address.vpn_gateway_ip",
            "google_compute_network.vpc_network",
            "google_compute_vpn_gateway.vpn_gateway"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "udp4500_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-07-08T13:14:16.350-07:00",
            "id": "projects/ctp-prj-1/regions/us-central1/forwardingRules/udp4500-forwarding-rule",
            "ip_address": "35.224.60.218",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "udp4500-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "4500-4500",
            "project": "ctp-prj-1",
            "recreate_closed_psc": false,
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/regions/us-central1/forwardingRules/udp4500-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/regions/us-central1/targetVpnGateways/ctp-vpn-us"
          },
          "dependencies": [
            "google_compute_address.vpn_gateway_ip",
            "google_compute_network.vpc_network",
            "google_compute_vpn_gateway.vpn_gateway"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "udp500_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-07-08T13:14:15.492-07:00",
            "id": "projects/ctp-prj-1/regions/us-central1/forwardingRules/udp500-forwarding-rule",
            "ip_address": "35.224.60.218",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "udp500-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "500-500",
            "project": "ctp-prj-1",
            "recreate_closed_psc": false,
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/regions/us-central1/forwardingRules/udp500-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/regions/us-central1/targetVpnGateways/ctp-vpn-us"
          },
          "dependencies": [
            "google_compute_address.vpn_gateway_ip",
            "google_compute_network.vpc_network",
            "google_compute_vpn_gateway.vpn_gateway"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.54.126.155",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-07-08T13:13:32.372-07:00",
            "id": "projects/ctp-prj-1/global/addresses/global-address",
            "name": "global-address",
            "prefix_length": 0,
            "project": "ctp-prj-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/addresses/global-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/ctp-prj-1/global/forwardingRules/http-rule",
            "ip_address": "34.54.126.155",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-rule",
            "port_range": "80-80",
            "project": "ctp-prj-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/forwardingRules/http-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/targetHttpProxies/http-proxy"
          },
          "dependencies": [
            "data.google_compute_image.debian",
            "google_compute_backend_service.default",
            "google_compute_global_address.default",
            "google_compute_http_health_check.default",
            "google_compute_instance_group_manager.webservers",
            "google_compute_instance_template.instance_template",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ctp-prj-1/global/networks/vpc-001",
            "mtu": 0,
            "name": "vpc-001",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "106277809187583618",
            "project": "ctp-prj-1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/networks/vpc-001"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-08T13:14:04.747-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/ctp-prj-1/regions/us-central1/subnetworks/subnet-001",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "subnet-001",
            "network": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/networks/vpc-001",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ctp-prj-1",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/regions/us-central1/subnetworks/subnet-001",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-08T13:16:01.980-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/ctp-prj-1/global/targetHttpProxies/http-proxy",
            "name": "http-proxy",
            "project": "ctp-prj-1",
            "proxy_bind": false,
            "proxy_id": 3688520446629771246,
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/targetHttpProxies/http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/urlMaps/url-map"
          },
          "dependencies": [
            "data.google_compute_image.debian",
            "google_compute_backend_service.default",
            "google_compute_http_health_check.default",
            "google_compute_instance_group_manager.webservers",
            "google_compute_instance_template.instance_template",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-08T13:15:50.855-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/backendServices/backend-service-unique",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "fHY2ZCGhNQs=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/ctp-prj-1/global/urlMaps/url-map",
            "map_id": 5041573863723496985,
            "name": "url-map",
            "path_matcher": [],
            "project": "ctp-prj-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctp-prj-1/global/urlMaps/url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_image.debian",
            "google_compute_backend_service.default",
            "google_compute_http_health_check.default",
            "google_compute_instance_group_manager.webservers",
            "google_compute_instance_template.instance_template",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    }
  ]
}